# omni-view

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json
agent-rust/: Cargo.toml  package.json
agent-rust/src/: encoder.rs  main.rs  server.rs
apps/agent/: .gitignore  Cargo.toml  omniview-agent.json  package.json
apps/agent/src/: capture.rs  consts.rs  encoder.rs  lib.rs  main.rs  server.rs
apps/agent/src/config/: interface.rs  mod.rs
apps/agent/src/consts/: consts.rs  mod.rs  states.rs
apps/agent/src/encoders/: h264.rs  img.rs  interface.rs  mod.rs
apps/agent/src/services/: backend.rs  ffmpeg.rs  mod.rs
apps/agent/tests/: img_encode_test.rs  multi_client_integration.rs  session_test.rs
apps/backend/: .env  .env.example  .gitignore  package.json  tsconfig.e2e.json  tsconfig.json  tsconfig.spec.json
apps/backend/src/: app.controller.ts  app.module.ts  app.service.ts  jest.setup.ts  main.ts
apps/backend/src/agents/: agent.entity.ts  (+12 more)
apps/backend/test/: agent-connection.e2e-spec.ts  jest-e2e.json  ws-gateway.e2e-spec.ts
apps/desktop/: package.json  tsconfig.json
apps/mobile/: .gitignore  App.tsx  app.json  package.json  tsconfig.json
apps/web/: .env.example  .gitignore  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
client-web/: app.js  index.html
e2e/playwright/: webrtc.spec.ts
tools/: save-frame-client.js  ws-test-viewer-only.js  ws-test.js
(+144 files in other folders)
